--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.7",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
