--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,18 +25,16 @@ services:
   db:
     image: mysql:5.7
     environment:
-      MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
-      MYSQL_DATABASE=${DB_NAME}
-      MYSQL_USER=${DB_USER}
-      MYSQL_ROOT_HOST=%
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_HOST: %
     ports:
       - "${DB_PORT}:3306"
     volumes:
       - db-data:/var/lib/mysql
-    logging:
-      options:
-        max-size: "10m"
-        max-file: "3"
+      - ./my.cnf:/etc/mysql/conf.d/custom.cnf
     networks:
       - app-network
 volumes:
